Colaboratory를 통해 생성됨

--- a/Untitled0_ipynb의_사본.ipynb
+++ b/Untitled0_ipynb의_사본.ipynb
@@ -1238,12 +1238,35 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"hello world\")"
+      ],
+      "metadata": {
+        "id": "CePQ7gAW7-Ql",
+        "outputId": "fb3e7d19-86c7-4e64-e9f9-925875cfc27b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello world\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM5eDNE8vSqExTttlLEIb4X",
+      "authorship_tag": "ABX9TyOUY8tVE0wyfeHQFuIDAFSG",
       "include_colab_link": true
     },
     "kernelspec": {
